@@ -3,6 +3,7 @@ cm4all-beng-proxy (0.5.9) unstable; urgency=low
   * tcache: fixed typo in tcache_string_match()
   * tcache: support VARY=SESSION
   * translate: added the INVALIDATE response packet
+  * cache, session: higher size limits
 
  --
 
